--- a/rhasspy/config.json
+++ b/rhasspy/config.json
@@ -3,7 +3,7 @@
     "slug": "rhasspy",
     "version": "2.5.11",
     "description": "Offline voice assistant for Home Assistant",
-    "url": "https://github.com/rhasspy/hassio-addons",
+    "url": "https://github.com/coderoffortune/hassio-addons",
     "arch": [
         "aarch64",
         "amd64",
@@ -15,7 +15,7 @@
     ],
     "options": {
         "profile_dir": "/share/rhasspy/profiles",
-        "profile_name": "en",
+        "profile_name": "it",
         "ssl": false,
         "certfile": "cert",
         "keyfile": "key",
